--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "forever-monitor": "^3.0.3",
     "ms": "^3.0.0-canary.1",
     "parsec": "^2.0.2",
-    "topgg-autoposter": "^2.0.1",
-  },
+    "topgg-autoposter": "^2.0.1"
+  }
 }
