--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "canvas": "^2.11.0",
     "chalk": "^4.1.2",
     "discord-giveaways": "^6.0.1",
     "discord.js": "^14.6.0",
+    "discordbotlist": "^1.0.0",
     "forever-monitor": "^3.0.3",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.2",
