--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^6.8.2",
     "ms": "^3.0.0-canary.1",
     "parsec": "^2.0.2",
-    "topgg-autoposter": "^2.0.1"
+    "topgg-autoposter": "^2.0.1",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
